# org.openocd-openocd_pt

./: .editorconfig  CMakeLists.txt  Jenkinsfile  build_artifact.py
.github/workflows/: main.yml
cmake/tools/: apply_patches.py  patch.py
jonchki/: install.py  platform_detect.py
libusb/: CMakeLists.txt
openocd/: CMakeLists.txt  muhkuh_openocd.c
openocd/copy/: CMakeLists.txt
openocd/copy/src/: muhkuh_openocd.c  muhkuh_openocd.h
openocd/installer/: install_linux.lua  install_windows.lua  openocd.xml
